--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,9 @@ p{text-align:center;}
 }
  .navbar.navbar-light{
    height: 45px;
+   width: 1200px;
+   margin-left: auto;
+   margin-right: auto;
  }
  .col-md{
    font-size: 20px;
